[package]
name = "window"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
gtk = { version = "0.6.6", package = "gtk4" }
glib = "0.17.10"
glib-sys = "0.17.10"
gio = "0.17.10"
gio-2-0-sys = "0.46.4"
pango-sys = "0.17.10"
